adds stylesheets directory and base styling

--- a/views/index.html
+++ b/views/index.html
@@ -2,12 +2,19 @@
 
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="base.css" />
+        <link rel="stylesheet" type="text/css" href="/stylesheets/base.css" />
+        <script
+            src="http://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
     </head>
 
     <body>
+        <header>
+            <h1>This is the header</h1>
+        </header>
         <h1>ToDo List</h1>
-        
+
         <script type="text/javascript" src="app.js"></script>
     </body>
 
