updates html scaffold

--- a/views/index.html
+++ b/views/index.html
@@ -11,9 +11,17 @@
 
     <body>
         <header>
-            <h1>This is the header</h1>
+            <h1>todo<span>list</span></h1>
+            <h2>•• Never forget a task again ••</h2>
         </header>
-        <h1>ToDo List</h1>
+
+        <section class="form">
+            <input type="text" id="todoInput" placeholder="Task goes here..." />
+        </section>
+
+        <ul class="list">
+
+        </ul>
 
         <script type="text/javascript" src="app.js"></script>
     </body>
